// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "tooltipBackgroundColor": "gray",
                      "tooltipForegroundColor": "white",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-htoDjs dXEIgP"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button ripple sc-htoDjs dXEIgP sc-EHOje jQdaQk"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        tooltip=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "tooltipBackgroundColor": "gray",
                              "tooltipForegroundColor": "white",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={Object {}}
                            tooltip=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-circle test-class"
  >
    <styled.div
      height="24px"
      width="24px"
    >
      <Styled(Button)
        className="test-class"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={
          Object {
            "borderColor": "#000000",
          }
        }
        testing={true}
        theme={Object {}}
        tooltip=""
        visible={true}
        width=""
        xcss={null}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                direction="right"
                disabled={true}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "tooltipBackgroundColor": "gray",
                      "tooltipForegroundColor": "white",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button nohover sc-htoDjs dXEIgP"
                    disabled={true}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button nohover sc-htoDjs dXEIgP sc-EHOje jSNTSC"
                      disabled={true}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        tooltip=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "tooltipBackgroundColor": "gray",
                              "tooltipForegroundColor": "white",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={Object {}}
                            tooltip=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={false}
              width=""
              xcss={null}
            >
              <Button
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "tooltipBackgroundColor": "gray",
                      "tooltipForegroundColor": "white",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-htoDjs dXEIgP"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={false}
                  >
                    <div
                      className="ui-button ripple sc-htoDjs dXEIgP sc-EHOje kJnGDV"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        tooltip=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "tooltipBackgroundColor": "gray",
                              "tooltipForegroundColor": "white",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={Object {}}
                            tooltip=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "borderColor": "#000000",
  },
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
